# exsb

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  build.rs  justfile
.github/workflows/: ci.yml  rust-audit.yml  rust-build.yml  rust-clippy.yml  rust-coverage.yml  rust-msrv.yml  rust.yml
exercism-api/: Cargo.toml
mini_exercism/: Cargo.toml
mini_exercism/src/: api.rs  cli.rs  core.rs  lib.rs
mini_exercism/src/api/: website.rs
mini_exercism/src/api/website/: detail.rs
mini_exercism/src/cli/: detail.rs
mini_exercism/src/cli/detail/os/: nix.rs  windows.rs
mini_exercism/tests/: api.rs  core.rs
mini_exercism/tests/api_helpers/: mod.rs
src/: command.rs  commands.rs  credentials.rs  download_limiter.rs  error.rs  exercism.rs  fs.rs  lib.rs  main.rs  progress.rs  reqwest.rs  task.rs  tracing.rs
src/command/: backup.rs
src/command/backup/: args.rs  detail.rs
src/command/backup/detail/: exercism.rs  fs.rs
src/commands/: backup.rs
src/commands/backup/: args.rs
src/exercism/: credentials.rs  solutions.rs  tracks.rs
tests/: cli.rs
