[package]
name = "exsb"
version = "0.1.0"
authors = [ "Charles Lechasseur <shiftingbeard@gmx.com>" ]
edition = "2021"
rust-version = "1.70.0"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/clechasseur/exsb#readme"
repository = "https://github.com/clechasseur/exsb"
documentation = "https://github.com/clechasseur/exsb"

description = "Command-line tool to backup your Exercism.org solutions"

keywords = [ "cli", "exercism" ]
categories = [ "command-line-utilities" ]

include = [ "src/**/*", "tests/**/*", "Cargo.lock", "Cargo.toml", "LICENSE", "README.md" ]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
env_logger = "0.10.0"
futures = "0.3.29"
indicatif = "0.17.7"
log = "0.4.20"
mini_exercism = { version = "1.1.0", features = ["cli"] }
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.12"
